--- a/index.html
+++ b/index.html
@@ -6,18 +6,16 @@
     <title>IEDC CUSAT - Innovation and Entrepreneurship Development Cell</title>
     <meta name="description" content="IEDC CUSAT is a government-funded organization that aims to promote entrepreneurship among students and young professionals in India." />
     <meta name="author" content="IEDC CUSAT" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <meta property="og:title" content="IEDC CUSAT - Innovation and Entrepreneurship Development Cell" />
     <meta property="og:description" content="IEDC CUSAT is a government-funded organization that aims to promote entrepreneurship among students and young professionals in India." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
